# production-code-feb

./: .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.jupyter  Dockerfile.simple  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
config/: database.py  object_storage.py  variables.py
migrations/: clickhouse_init.sql  init.sql
notebooks/: iris.ipynb
scripts/: entrypoint.sh
src/: app.py  evaluate.py  inference.py  object_storage.py  pipeline.py  preprocessing.py  train.py
tests/: test_preprocessing.py
